turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:7: error: too many arguments for method setCouleurSol: (couleur: java.awt.Color)Unit
    setCouleurSol(Color,black)
                 ^